feat(tarnished): Make strategy state thread-safe with centralized locking and UI snapshots